[package]
name = "pugbot-poise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
version = "0.12.0"

[features]
default = ["serenity/rustls_backend", "cache", "chrono", "handle_panics"]
cache = ["serenity/cache"]
chrono = ["serenity/chrono"]
handle_panics = []